chore: update spring boot to v3.3.10
Issue-ID: PORTALNG-140
Change-Id: I292c08fa479d0989dce6a83137a2e99bf50371d6
Signed-off-by: benzelleroehr <ben.zelleroehr@telekom.de>